--- a/_includes/council/bio.html
+++ b/_includes/council/bio.html
@@ -1,52 +1,52 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h2 class="display-4">Fluid jumbotron</h2>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-  </div>
-</div>
+<section class="section section-blog-fw pb-3">
 
-<!-- News jumbotron -->
-<div class="jumbotron text-center hoverable p-4">
-
-  <!-- Grid row -->
+  <!--Grid row-->
   <div class="row">
+    <div class="col-md-12">
 
-    <!-- Grid column -->
-    <div class="col-md-4 offset-md-1 mx-3 my-3">
-
-      <!-- Featured image -->
-      <div class="view overlay">
-        <img src="https://mdbootstrap.com/img/Photos/Others/laptop-sm.jpg" class="img-fluid" alt="Sample image for first version of blog listing">
-        <a>
-          <div class="mask rgba-white-slight"></div>
-        </a>
+      <!--Featured image-->
+      <div class="cover-image">
+        <img src="/img/mayors-tech-council/mtc-banner.png" alt="{{ page.title }}">
+        <div class="rgba-brown-strong">
+        </div>
       </div>
 
+      <!-- News jumbotron -->
+      <div class="jumbotron text-center hoverable p-4">
+
+        <!-- Grid row -->
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col-md-4 offset-md-1 mx-3 my-3">
+
+            <!-- Featured image -->
+            <div class="view overlay">
+              <img src="/img/mayors-tech-council/{{page.reference}}.png" class="img-fluid" alt="Sample image for first version of blog listing">
+              <a>
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-7 text-md-left ml-3 mt-3">
+            <a class="green-text">
+              <h6 class="h6 pb-1"><i class="fa fa-desktop pr-1"></i> {{page.title}}, {{page.organization}}</h6>
+            </a>
+            <h4 class="h4 mb-4">{{page.full-name}}</h4>
+
+            <p class="font-weight-normal">{{content}}</p>
+            <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p>
+          </div>
+          <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+      </div>
+      <!-- News jumbotron -->
     </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-7 text-md-left ml-3 mt-3">
-
-      <!-- Excerpt -->
-      <a href="#!" class="green-text">
-        <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
-      </a>
-
-      <h4 class="h4 mb-4">This is title of the news</h4>
-
-      <p class="font-weight-normal">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque, totam
-        rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.</p>
-      <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p>
-
-      <a class="btn btn-success">Read more</a>
-
-    </div>
-    <!-- Grid column -->
-
   </div>
-  <!-- Grid row -->
-
-</div>
-<!-- News jumbotron -->
+</section>
