--- a/_includes/council/bio.html
+++ b/_includes/council/bio.html
@@ -21,7 +21,7 @@
           <div class="col-md-4 offset-md-1 mx-3 my-3">
 
             <!-- Featured image -->
-            <div class="view overlay">
+            <div>
               <img src="/img/mayors-tech-council/{{page.reference}}.png" class="img-fluid" alt="Sample image for first version of blog listing">
               <a>
                 <div class="mask rgba-white-slight"></div>
@@ -33,12 +33,10 @@
           <!-- Grid column -->
           <div class="col-md-7 text-md-left ml-3 mt-3">
             <a class="green-text">
-              <h6 class="h6 pb-1"><i class="fa fa-desktop pr-1"></i> {{page.title}}, {{page.organization}}</h6>
+              <h6 class="h6 pb-1"><i class="fa fa-desktop pr-1"></i> {{page.title}}, <strong>{{page.organization}}</strong></h6>
             </a>
             <h4 class="h4 mb-4">{{page.full-name}}</h4>
-
             <p class="font-weight-normal">{{content}}</p>
-            <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p>
           </div>
           <!-- Grid column -->
 
